# sharpemu

./: CONTRIBUTING.md  Directory.Build.props  Directory.Packages.props  README.md  REUSE.toml  SharpEmu.slnx  global.json
.github/ISSUE_TEMPLATE/: game-compatibility.yml
.github/workflows/: workflow.yml
assets/images/: SharpEmu.icns
docs/: bink2-bridge.md
src/SharpEmu.CLI/: Program.cs  SharpEmu.CLI.csproj  app.manifest  packages.lock.json
src/SharpEmu.Core/: packages.lock.json
src/SharpEmu.Core/Cpu/Native/: DirectExecutionBackend.Imports.cs  DirectExecutionBackend.cs
src/SharpEmu.Core/Memory/: PhysicalVirtualMemory.cs
src/SharpEmu.GUI/: EmulatorProcess.cs  GameSurfaceHost.cs  GuiSettings.cs  MainWindow.axaml  MainWindow.axaml.cs  PerGameSettings.cs  SharpEmu.GUI.csproj
src/SharpEmu.GUI/Languages/: ar.json  br.json  de.json  dk.json  es.json  fr.json  hu.json  it.json  ja.json  ko.json  nl.json  pt.json  ru.json  tr.json
src/SharpEmu.Gpu.Vulkan.Native/: CMakeLists.txt
src/SharpEmu.Gpu.Vulkan.Native/src/: backend.cpp
src/SharpEmu.Gpu.Vulkan.Native/tests/: abi_test.cpp  smoke.comp  smoke.frag  smoke.vert
src/SharpEmu.HLE/: GuestThreadExecution.cs  IGuestAddressSpace.cs
src/SharpEmu.Libs/: SharpEmu.Libs.csproj  packages.lock.json
src/SharpEmu.Libs/Agc/: AgcExports.cs  Gen5ShaderIr.cs  Gen5ShaderScalarEvaluator.cs  Gen5ShaderTranslator.cs  Gen5SpirvTranslator.Alu.cs  Gen5SpirvTranslator.cs  GnmTiling.cs  SpirvModuleBuilder.cs
src/SharpEmu.Libs/Ampr/: AmprExports.cs
src/SharpEmu.Libs/Audio/: AudioOutExports.cs
src/SharpEmu.Libs/Bink/: Bink2MovieBridge.cs  FfmpegNativeBinkFrameSource.cs
src/SharpEmu.Libs/Font/: FontExports.cs
src/SharpEmu.Libs/Gpu/: GuestGpuTypes.cs
src/SharpEmu.Libs/Json/: JsonExports.cs
src/SharpEmu.Libs/Kernel/: KernelEventQueueCompatExports.cs  KernelExceptionCompatExports.cs  KernelExports.cs  KernelMemoryCompatExports.cs  KernelPthreadCompatExports.cs  KernelPthreadExtendedCompatExports.cs  KernelRuntimeCompatExports.cs  KernelVirtualRangeAllocator.cs
src/SharpEmu.Libs/Network/: NetExports.cs
src/SharpEmu.Libs/Pad/: PadExports.cs
src/SharpEmu.Libs/SaveData/: SaveDataExports.cs
src/SharpEmu.Libs/Stubs/: GameServiceStubs.cs
src/SharpEmu.Libs/VideoOut/: VulkanVideoPresenter.cs
src/SharpEmu.ShaderCompiler/: Gen5ShaderIr.cs  Gen5ShaderScalarEvaluator.cs  Gen5ShaderTranslator.cs
src/SharpEmu.ShaderCompiler.Vulkan/: Gen5SpirvTranslator.cs
tests/SharpEmu.Libs.Tests/Agc/: AgcTextureTransportTests.cs
tests/SharpEmu.Libs.Tests/Audio/: AudioOutExportsTests.cs
tests/SharpEmu.Libs.Tests/Fiber/: FiberExportsTests.cs
tests/SharpEmu.Libs.Tests/Font/: FontExportsTests.cs
tests/SharpEmu.Libs.Tests/GUI/: PerGameSettingsTests.cs
tests/SharpEmu.Libs.Tests/Kernel/: KernelPathCaseSensitivityTests.cs
tests/SharpEmu.Libs.Tests/Memory/: GuestMemoryAllocatorTests.cs
tests/SharpEmu.Libs.Tests/VideoOut/: VulkanGuestImageByteCountTests.cs  VulkanGuestImageTypeTests.cs
tests/SharpEmu.ShaderCompiler.Tests/: Gen5FlatMemoryTests.cs  Gen5ImageTests.cs  SharpEmu.ShaderCompiler.Tests.csproj
